# fa

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  main.py  nudge.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: file_budget.py
.codex/: hooks.json
.codex/hooks/: file_budget.py  format.py  lint.py
docs/: nudge.md  profiles.md
fa/: cli.py
fa/core/: __init__.py  config.py  env.py  git.py  logging.py  logview.py  logview_parse.py  (+5 more)
specs/: cli.md  context-injection.md  context.md  error.md  index.md  layout.md  logging.md  policy.md  spec.md  task.md  testing.md  tools.md
tests/: conftest.py  test_approve_descendants.py  test_cli.py  test_config_tool_extra_env.py  test_core_config.py  test_core_git.py  test_core_logging.py  test_core_models.py  test_core_project.py  test_core_subprocess.py  test_core_tty.py  test_extract_text_content.py  test_find_new_parent_task.py  test_gestate.py  test_gestate_artifacts.py  test_gestate_auto_run.py  test_gestate_commands.py  test_gestate_created_task.py  test_gestate_descendants.py  test_gestate_extract_text.py  test_gestate_prompt.py  test_gestate_prompting.py  test_gestate_review.py  test_gestate_runner.py  test_gestate_validate.py  test_gestate_viewer_handoff.py  test_load_dotenv.py  test_logview.py  test_logview_codex.py  test_logview_format.py  test_logview_parse.py  test_logview_viewer.py  test_parse_id_range.py  test_parse_task_reference.py  test_policy_runner.py  test_policy_runner_scoped_files.py  test_policy_storage.py  test_quota.py  test_resolve_descendants.py  test_resolve_to_leaves.py  (+12 more)
(+60 files in other folders)
