[project]
name = "fa"
version = "0.1.0"
description = "Harness Engineering Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["fa*"]

[tool.setuptools.package-data]
fa = ["templates/*.j2"]

[project.scripts]
fa = "fa.cli:main"
