[project]
name = "fa"
version = "0.1.0"
description = "Harness Engineering Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["fa*"]

[tool.setuptools.package-data]
fa = ["templates/*.j2"]

[project.scripts]
fa = "fa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["fa"]

[tool.coverage.report]
show_missing = true
